force-app/main/default/objects/Operations_Team_Member__c/Operations_Team_Member__c.object-meta.xml
<CustomObject>
    <label>Operations Team Member</label>
    <nameField>
        <displayFormat>OTM#-{0000}</displayFormat>
        <label>Operations Team Member Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Operations Team Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>