force-app/main/default/objects/Operations_Team_Member__c/fields/Operations_Team__c.field-meta.xml
<CustomField>
    <fullName>Operations_Team__c</fullName>
    <description>Select the operation team</description>
    <label>Operations Team</label>
    <referenceTo>Operations_Team__c</referenceTo>
    <relationshipLabel>Operations Team Members</relationshipLabel>
    <relationshipName>Operations_Team_Members</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>