force-app/main/default/objects/Operations_Team_Member__c/fields/Team_Roles__c.field-meta.xml
<CustomField>
    <fullName>Team_Roles__c</fullName>
    <description>Define the role of the team member</description>
    <label>Team Roles</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Event Ops</fullName>
                <default>true</default>
                <label>Event Ops</label>
            </value>
            <value>
                <fullName>Executive</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Marketing Services</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>